Completed reset password feature

--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,4 @@ SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE=true
 
 JWT_SECRET_KEY=your_jwt_secret_key
 JWT_EXPIRATION_TIME=3600000
+CLIENT_APP_URL=client_app_base-url
