--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,12 +28,18 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
       - name: Build with Gradle
-        run: chmod +x ./gradlew build
+        run: ./gradlew build
 
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
       - name: Run tests
-        run: chmod +x ./gradlew test
+        run: ./gradlew test
