--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -34,9 +34,5 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Run tests
         run: ./gradlew test
