--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  profiles:
+    active: ${ACTIVE_PROFILE:dev}
+    include:
+      - server
+      
   application:
     name: spring-blog-api
   config:
