fix the test case by adding the open api confg in application.yml of test case

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -28,3 +28,8 @@ security:
 client:
   app:
     url: http://localhost:3000
+
+openapi:
+  server:
+    url: ${OPENAPI_SERVER_URL:http://localhost:8080/api/v1}
+    description: ${OPENAPI_SERVER_DESCRIPTION:Test}
